Downgraded project to Java 11
To be able to use the library on Android phones, the JDK version used to compile it against should not be higher than 11 to target a reasonable amount of devices currently in use.
This required some code changes to remove newer API uses.